vlib/v/checker/tests/match_expr_non_void_stmt_last.vv
type Arr = []int | []string

fn (arr Arr) str() string {
	return match arr {
		[]string {
			arr.join(' ')
		}
		[]int {
			return arr.str()
		}
	}
}

fn main() {
	println(Arr([0, 0]))
	println(Arr(['0', '0']))
}
